--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,10 +3,13 @@ env:
   es2021: true
 extends:
   - airbnb-base
-parser: '@typescript-eslint/parser'
+parser: "@typescript-eslint/parser"
 parserOptions:
   ecmaVersion: 12
   sourceType: module
 plugins:
-  - '@typescript-eslint'
-rules: {}
+  - "@typescript-eslint"
+rules:
+  no-undef: 0
+  prefer-default-export: 0
+  import/extensions: 0
