--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "node-ini-decorator",
+  "name": "ini-decorator",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/src/ini.js",
   "license": "MIT",
   "scripts": {
+    "build": "tsc",
     "test": "jest",
+    "test:cov": "jest --coverage",
     "test:watch": "jest --watch"
   },
   "devDependencies": {
