--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
+    "lint": "eslint .",
     "test": "jest",
     "test:cov": "jest --coverage",
     "test:watch": "jest --watch"
