--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ini-decorator",
+  "name": "@decorators/ini",
   "version": "1.0.0",
   "main": "dist/src/ini.js",
   "license": "MIT",
